fix: field renderers

--- a/docs/developer-docs/6.0.x/headless-cms/ui/field-renderer.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/ui/field-renderer.mdx
@@ -3,8 +3,6 @@ id: anmxv1uu
 title: Field Renderers
 description: List of available built-in field renderers for the UI of the Headless CMS.
 ---
-
-
 import {Alert} from "@/components/Alert";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
@@ -25,21 +23,21 @@ Each renderer is identified by a unique `rendererName` and can be selected when 
 
 Boolean fields represent true/false values.
 
-**`boolean-input`** - Renders a simple switch button.
+**`switch`** - Renders a simple switch button.
 
 ## Text Field
 
 Text fields store short text values.
 
-**`text-input`** - Renders a simple input with its type set to "text".
+**`textInput`** - Renders a simple input with its type set to "text".
 
-**`text-inputs`** - Renders a simple list of text inputs. *Supports multiple values.*
+**`textInputs`** - Renders a simple list of text inputs. *Supports multiple values.*
 
 **`tags`** - Renders a tags component for entering multiple text values. *Supports multiple values.*
 
-**`radio-buttons`** - Renders radio buttons, allowing selection of a single value. *Requires predefined values.*
+**`radioButtons`** - Renders radio buttons, allowing selection of a single value. *Requires predefined values.*
 
-**`select-box`** - Renders a select box, allowing selection of a single value. *Requires predefined values.*
+**`dropdown`** - Renders a select box, allowing selection of a single value. *Requires predefined values.*
 
 **`checkboxes`** - Renders checkboxes, allowing selection of multiple values. *Supports multiple values. Requires predefined values.*
 
@@ -47,13 +45,13 @@ Text fields store short text values.
 
 Number fields store numeric values.
 
-**`number-input`** - Renders a simple input with its type set to "number".
+**`numberInput`** - Renders a simple input with its type set to "number".
 
-**`number-inputs`** - Renders a simple list of number inputs. *Supports multiple values.*
+**`numberInputs`** - Renders a simple list of number inputs. *Supports multiple values.*
 
-**`radio-buttons`** - Renders radio buttons, allowing selection of a single numeric value. *Requires predefined values.*
+**`radioButtons`** - Renders radio buttons, allowing selection of a single numeric value. *Requires predefined values.*
 
-**`select-box`** - Renders a select box, allowing selection of a single numeric value. *Requires predefined values.*
+**`dropdown`** - Renders a select box, allowing selection of a single numeric value. *Requires predefined values.*
 
 **`checkboxes`** - Renders checkboxes, allowing selection of multiple numeric values. *Supports multiple values. Requires predefined values.*
 
@@ -61,49 +59,49 @@ Number fields store numeric values.
 
 Long text fields store larger amounts of text.
 
-**`long-text-text-area`** - Renders a simple text area, suitable for larger amounts of text.
+**`textarea`** - Renders a simple text area, suitable for larger amounts of text.
 
-**`long-text-inputs`** - Renders a simple list of text areas. *Supports multiple values.*
+**`textareas`** - Renders a simple list of text areas. *Supports multiple values.*
 
 ## Rich Text Field
 
 Rich text fields store formatted text content using Lexical editor.
 
-**`lexical-text-input`** - Renders a lexical text editor.
+**`lexicalEditor`** - Renders a lexical text editor.
 
-**`lexical-text-inputs`** - Renders a list of lexical editors. *Supports multiple values.*
+**`lexicalEditors`** - Renders a list of lexical editors. *Supports multiple values.*
 
 ## DateTime Field
 
 DateTime fields store date and time values in various formats. The format is defined using the `settings.type` property.
 
-**`date-time-input`** - Renders input for various formats of date and time. Supports: `dateOnly`, `dateTimeWithoutTimezone`, `dateTimeWithTimezone`, `time`.
+**`dateTimeInput`** - Renders input for various formats of date and time. Supports: `dateOnly`, `dateTimeWithoutTimezone`, `dateTimeWithTimezone`, `time`.
 
-**`date-time-inputs`** - Renders inputs for various formats of dates and times. *Supports multiple values.* Supports: `dateOnly`, `dateTimeWithoutTimezone`, `dateTimeWithTimezone`, `time`.
+**`dateTimeInputs`** - Renders inputs for various formats of dates and times. *Supports multiple values.* Supports: `dateOnly`, `dateTimeWithoutTimezone`, `dateTimeWithTimezone`, `time`.
 
 ## Reference Field
 
 Reference fields create relationships between content entries.
 
-**`ref-input`** - Renders an auto-complete input, allowing selection of a single referenced entry.
+**`refAutocompleteSingle`** - Renders an auto-complete input, allowing selection of a single referenced entry.
 
-**`ref-inputs`** - Renders an auto-complete input, allowing selection of multiple referenced entries. *Supports multiple values.*
+**`refAutocompleteMultiple`** - Renders an auto-complete input, allowing selection of multiple referenced entries. *Supports multiple values.*
 
-**`ref-simple-single`** - Renders a list of radio buttons, allowing selection of one related record.
+**`refRadioButtons`** - Renders a list of radio buttons, allowing selection of one related record.
 
-**`ref-simple-multiple`** - Renders a list of checkboxes, allowing selection of one or more records. *Supports multiple values.*
+**`refCheckboxes`** - Renders a list of checkboxes, allowing selection of one or more records. *Supports multiple values.*
 
-**`ref-advanced-single`** - Renders a preview card of the selected record. The user searches through records using a modal window.
+**`refDialogSingle`** - Renders a preview card of the selected record. The user searches through records using a modal window.
 
-**`ref-advanced-multiple`** - Renders preview cards of the selected records. User can browse through records using a modal dialog. *Supports multiple values.*
+**`refDialogMultiple`** - Renders preview cards of the selected records. User can browse through records using a modal dialog. *Supports multiple values.*
 
 ## Object Field
 
 Object fields contain nested field structures.
 
-**`object-accordion`** - Renders fields within an accordion.
+**`objectAccordionSingle`** - Renders fields within an accordion.
 
-**`objects-accordion`** - Renders multiple objects within an accordion with add/remove functionality. *Supports multiple values.*
+**`objectAccordionMultiple`** - Renders multiple objects within an accordion with add/remove functionality. *Supports multiple values.*
 
 ## Dynamic Zone Field
 
@@ -113,10 +111,8 @@ Dynamic zone fields allow selecting from predefined templates.
 
 ## Special Field Types
 
-**`ui`** - Renders a visual separator to organize form fields. *Field type: `ui`.*
+**`uiSeparator`** - Renders a visual separator to organize form fields. *Field type: `ui`.*
 Note that the `ui` field is a base field, which other UI fields can be built on top of.
-
-To have a separator, use the `uiSeparator` renderer.
 
 ## Utility Renderers
 
